[package]
name = "grpc-test"
version = "0.1.0"
edition = "2018"


[dependencies]
tonic = "0.5"
prost = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

[build-dependencies]
tonic-build = "0.5"

[[bin]]
name = "grpc-server"
path = "bin/server.rs"

[[bin]]
name = "grpc-client"
path = "bin/client.rs"
